Master - modified products.html

--- a/products.html
+++ b/products.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        
+        <title>
+            Products Master
+        </title>
     </head>
     <body>
         <table>
