Feature4 - add some pages

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 	<body>
 		<h1>This is my first page !!</h1>
 		You can go to <b>contents</b> <a href="contents.html">clicking here</a>
+		<div>
+			<p>Soy un parrafo feliz</p>
+		</div>
 	</body>
 </html>
