--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-	<head></head>
+	<head>
+		<title>
+			Index
+		</title>
+		
+	</head>
 	<body>
 		<h1>This is my first page !!</h1>
 		You can go to <b>contents</b> <a href="contents.html">clicking here</a>
